--- a/CounterWebApp/pom.xml
+++ b/CounterWebApp/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mkyong</groupId>
-	<artifactId>CounterWebApp</artifactId>
+	<artifactId>LoadSettlementFiles</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>CounterWebApp Maven Webapp</name>
+	<name>Loading Settlement Files</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<jdk.version>1.8</jdk.version>
@@ -101,7 +101,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>CounterWebApp</finalName>
+		<finalName>LoadSettlementFiles</finalName>
 
 		<plugins>
 		    <!-- Eclipse project -->
@@ -135,7 +135,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<path>/CounterWebApp</path>
+					<path>/LoadSettlementFiles</path>
 				</configuration>
 			</plugin>
 
