--- a/CounterWebApp/src/main/webapp/WEB-INF/web.xml
+++ b/CounterWebApp/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	      http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 
-	<display-name>Counter Web Application</display-name>
+	<display-name>Load Settlement Files</display-name>
 
 	<servlet>
 		<servlet-name>mvc-dispatcher</servlet-name>
