--- a/CounterWebApp/pom.xml
+++ b/CounterWebApp/pom.xml
@@ -97,6 +97,13 @@
 			<artifactId>spring-batch-infrastructure</artifactId>
 			<version>${spring.batch.version}</version>
 		</dependency>
+		
+		<dependency>     
+			<groupId>org.hibernate</groupId>
+			     <artifactId>hibernate-validator</artifactId>
+			          <version>4.0.2.GA</version> 
+		</dependency> 
+ 
 
 	</dependencies>
 
