--- a/CounterWebApp/pom.xml
+++ b/CounterWebApp/pom.xml
@@ -104,6 +104,13 @@
 			          <version>4.0.2.GA</version> 
 		</dependency> 
  
+ 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>1.3.2</version>
+</dependency>
+ 	
 
 	</dependencies>
 
