--- a/CounterWebApp/pom.xml
+++ b/CounterWebApp/pom.xml
@@ -105,11 +105,14 @@
 		</dependency> 
  
  	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 <dependency>
-    <groupId>org.apache.commons</groupId>
+    <groupId>commons-io</groupId>
     <artifactId>commons-io</artifactId>
-    <version>1.3.2</version>
+    <version>2.5</version>
 </dependency>
+
  	
 
 	</dependencies>
