--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,19 @@
 			<version>${spring.version}</version>
 		</dependency>
 		
+		 <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>1.1.8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>1.1.8</version>
+            <scope>test</scope>
+        </dependency>
+		
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -65,6 +78,17 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<version>${spring.version}</version>
+		<scope>test</scope>
+	</dependency>
+
+		
 
 		<dependency>
 			<groupId>org.springframework</groupId>
