--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
     <version>2.5</version>
 </dependency>
 
+		<dependency>
+			<groupId>com.batch.utils</groupId>
+			<artifactId>calculatorUtils</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
  	
 
 	</dependencies>
