--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,12 @@
 			<artifactId>calculatorUtils</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
- 	
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>java-hamcrest</artifactId>
+			<version>2.0.0.0</version>
+		</dependency>
 
 	</dependencies>
 
